<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS 390H</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_0604_name">In Class Work from 0604</string>
    <string name="button_0604_hint">Work we did in class on 0604</string>
    <string name="button_assignment1_name">Assignment 1</string>
    <string name="button_assignment1_hint"/>
    <string name="button_assignment1_description">Using Java and Eclipse, you are to write a color finder program for Android. Use a numberpicker for each color and have the displayed color change dynamically as the numberpickers change.</string>

</resources>
