<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="edu.msudenver.cs390h.Project_Selector" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:id="@+id/projectSelectorScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/inClass0604"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/button_0604_hint"
            android:onClick="callInClass06004"
            android:text="@string/button_0604_name" />

        <Button
            android:id="@+id/assignment1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_assignment1_description"
            android:hint="@string/button_assignment1_hint"
            android:onClick="callAssignment1"
            android:text="@string/button_assignment1_name" />

    </LinearLayout>

</FrameLayout>
